--- a/web.config
+++ b/web.config
@@ -14,7 +14,7 @@
                     <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
                     <add input="{REQUEST_URI}" pattern="^/$" negate="true"/>
                 </conditions>
-                <action type="Rewrite" url="/EmpAtt/index.html" />
+                <action type="Rewrite" url="/GECMob/index.html" />
             </rule>
         </rules>
     </rewrite>
